--- a/client/src/components/Nav/NavStyles.css
+++ b/client/src/components/Nav/NavStyles.css
@@ -10,7 +10,7 @@
 }
 
 .header-bg {
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgb(187, 29, 29);
   transition: 0.5s;
 }
 
@@ -41,7 +41,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: black;
+    background: rgb(73, 73, 73);
     position: absolute;
     top: 0;
     left: 0;
@@ -57,7 +57,7 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: black;
+    background: rgb(63, 63, 63);
     position: absolute;
     top: 0;
     left: 0;
