--- a/client/src/components/MemeMemory/App.css
+++ b/client/src/components/MemeMemory/App.css
@@ -16,6 +16,12 @@
     font-size: 1em;
   }
   button:hover {
-    background: #c23866;
+    background: #FFD166;
     color: #fff;
   } 
+  .card-grid{
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
