debugging pictures not loading

--- a/client/src/components/MemeMemory/App.css
+++ b/client/src/components/MemeMemory/App.css
@@ -16,7 +16,7 @@
     font-size: 1em;
   }
   button:hover {
-    background: #FFD166;
+    background: #F4E04D;
     color: #fff;
   } 
   .card-grid{
