--- a/client/src/components/MemeMemory/components/SingleCard.css
+++ b/client/src/components/MemeMemory/components/SingleCard.css
@@ -7,3 +7,24 @@
     border: 2px solid #F4E04D;
     border-radius: 6px;
 }
+
+/* front card - the pic*/
+.card .front {
+    transform: rotateY(90deg);
+    transition: all ease-in 0.2s;
+    position: absolute;
+}
+.flipped .front {
+    transform: rotateY(0deg);
+    transition-delay: 0.2s;
+}
+
+/* back card - cover*/
+.card .back {
+    transition: all ease-in 0.2s;
+    transition-delay: 0.2s;
+}
+.flipped .back {
+    transform: rotateY(90deg);
+    transition-delay: 0s;
+}
