--- a/client/src/components/MemeMemory/App.css
+++ b/client/src/components/MemeMemory/App.css
@@ -7,9 +7,9 @@
   }
   button {
     background: none;
-    border: 2px solid #fff;
+    border: 2px solid #F4E04D;
     padding: 6px 12px;
-    border-radius: 4px;
+    border-radius: 200px;
     color: #fff;
     font-weight: bold;
     cursor: pointer;
